--- a/playbooks/common.yml
+++ b/playbooks/common.yml
@@ -1,6 +1,6 @@
 ---
-- name: update web, nfs and db servers
-  hosts: webservers, nfs, db
+- name: update web & nfs servers
+  hosts: webservers, nfs
   remote_user: ec2-user
   become: yes
   become_user: root
@@ -10,8 +10,8 @@
         name: wireshark
         state: latest
 
-- name: update LB server
-  hosts: lb
+- name: update LB & db server
+  hosts: lb, db
   remote_user: ubuntu
   become: yes
   become_user: root
@@ -19,7 +19,7 @@
     - name: Update apt repo
       apt: 
         update_cache: yes
-        
+
 
     - name: ensure wireshark is at the latest version
       apt:
