--- a/playbooks/common.yml
+++ b/playbooks/common.yml
@@ -1,6 +1,6 @@
 ---
 - name: update web & nfs servers
-  hosts: webservers, nfs
+  hosts: webserver, nfs
   remote_user: ec2-user
   become: yes
   become_user: root
