--- a/playbooks/common.yml
+++ b/playbooks/common.yml
@@ -25,3 +25,21 @@
       apt:
         name: wireshark
         state: latest
+
+- name: create directory, file and set timezone on all servers
+  hosts: webserver, nfs, db, lb
+  become: yes
+  tasks:
+    - name: create a directory
+      file:
+        path: /home/testdir
+        state: directory
+
+    - name: create a file
+      file:
+        path: /home/testdir/testdoc.txt
+        state: touch
+
+    - name: set timezone
+      timezone:
+        name: Africa/Lagos
