--- a/inventory/uat.yml
+++ b/inventory/uat.yml
@@ -2,3 +2,12 @@
 172.31.17.63 ansible_ssh_user='ec2-user' 
 
 172.31.21.121 ansible_ssh_user='ec2-user'
+
+[db]
+172.31.87.67 ansible_ssh_user='ubuntu'
+
+[lb]
+172.31.23.249 ansible_ssh_user='ubuntu'
+
+[nfs]
+172.31.81.168 ansible_ssh_user='ec2-user'
