--- a/roles/nginx/defaults/main/main.yml
+++ b/roles/nginx/defaults/main/main.yml
@@ -93,6 +93,10 @@ nginx_remove_license: true
 enable_nginx_lb: false
 load_balancer_is_required: false
 
+# IP mapping for load balancers
+web1: 172.31.17.63
+web2: 172.31.21.121
+
 # Specify whether or not you want this role to install the EPEL package when installing certain NGINX Plus modules.
 # Using 'true' will install EPEL.
 # Using 'false' will not install EPEL.
