--- a/inventory/uat.yml
+++ b/inventory/uat.yml
@@ -16,3 +16,4 @@
 172.31.87.127 ansible_ssh_user='ec2-user'
 172.31.90.203 ansible_ssh_user='ec2-user'
 172.31.88.82 ansible_ssh_user='ec2-user'
+172.31.21.3 ansible_ssh_user='ec2-user'
