--- a/deploy/jenkinsfile
+++ b/deploy/jenkinsfile
@@ -1,61 +1,30 @@
-   pipeline {
+pipeline {
     agent any
 
-    parameters {
-      string(name: 'inventory', defaultValue: 'uat',  description: 'This is the inventory file for the environment to deploy configuration')
-    }
+  stages {
 
-   stages {
-    stage('Build') {
-      steps {
-        script {
-          sh 'echo "Building Stage"'
-        }
-      }
-    }
-
-    stage('SCM Checkout'){
-      steps{
-                git 'https://github.com/jaymineh/proj14.git'
+     stage("Initial cleanup") {
+          steps {
+            dir("${WORKSPACE}") {
+              deleteDir()
             }
-    }
-
-    stage('Execute Ansible'){
-      steps{
-                ansiblePlaybook become: true, credentialsId: '4bb1197c-ad84-4064-b5be-bf2c8f9002f4', installation: 'ansible', inventory: 'inventory/${inventory}', playbook: 'playbooks/site.yml'
-            }
-    }
-
-    stage('Test') {
-      steps {
-        script {
-          sh 'echo "Testing Stage"'
+          }
         }
+
+    stage('Checkout SCM') {
+      steps {
+            git branch: 'main', url: 'https://github.com/jaymineh/Todo.git'
       }
     }
 
-    stage('Package') {
+    stage('Prepare Dependencies') {
       steps {
-        script {
-          sh 'echo "Package Stage"'
-        }
+             sh 'mv .env.sample .env'
+             sh 'composer install'
+             sh 'php artisan migrate'
+             sh 'php artisan db:seed'
+             sh 'php artisan key:generate'
       }
     }
-
-    stage('Deploy') {
-      steps {
-        script {
-          sh 'echo "Deploy Stage"'
-        }
-      }
-    }
-
-    stage('Clean Up') {
-      steps {
-        script {
-          sh 'echo "Clean Up Stage"'
-        }
-      }
-    }
-    }
+  }
 }
