--- a/.env.sample
+++ b/.env.sample
@@ -3,7 +3,7 @@ APP_DEBUG=true
 APP_KEY=SomeRandomString
 APP_URL=http://localhost
 
-DB_HOST=3.88.34.193x
+DB_HOST=172.31.87.67
 DB_DATABASE=tooling
 DB_USERNAME=webaccess
 DB_PASSWORD=mypass
