--- a/deploy/jenkinsfile
+++ b/deploy/jenkinsfile
@@ -19,11 +19,11 @@ pipeline {
 
     stage('Prepare Dependencies') {
       steps {
-            sudo sh 'mv .env.sample .env'
-            sudo sh 'composer install'
-            sudo sh 'php artisan migrate'
-            sudo sh 'php artisan db:seed'
-            sudo sh 'php artisan key:generate'
+             sh sudo 'mv .env.sample .env'
+             sh sudo 'composer install'
+             sh sudo 'php artisan migrate'
+             sh sudo 'php artisan db:seed'
+             sh sudo 'php artisan key:generate'
       }
     }
   }
