--- a/.env.sample
+++ b/.env.sample
@@ -4,9 +4,9 @@ APP_KEY=SomeRandomString
 APP_URL=http://localhost
 
 DB_HOST=34.238.239.82
-DB_DATABASE=tooling
-DB_USERNAME=webaccess
-DB_PASSWORD=mypass
+DB_DATABASE=homestead
+DB_USERNAME=homestead
+DB_PASSWORD=sePret^i
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
